--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -5,30 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CafeneaSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CafeneaSite.styles.css" asp-append-version="true" />
+    <!--JS pentru CITESTE MAI MULT/CITESTE MAI PUTIN-->
+    <script src="~/JS/index.js"></script>
+
+    <!--CSS pentru BOOTSTRAP-->
+    <link rel="stylesheet" href="~/cssBootstrap/bootstrap.min.css">
+
+    <!--CSS pentru EFECTUL DE MISCARE-->
+    <link rel="stylesheet" href="~/CSS/aos.css" />
+
+    <!--CSS si JS pentru IMAGINI LIGHT BOX-->
+    <script src="~/JS/jquery.min.js"></script>
+    <link rel="stylesheet" href="~/JS/jquery.fancybox.min.css" />
+    <script src="~/JS/fancybox.min.js"></script>
+
+    <!--CSS ul specific paginii-->
+    <link rel="stylesheet" href="~/CSS/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <!--SECTIUNEA NAVBAR-->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Cafenea</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Cafele/Index">Create Your Coffee</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/PaginiPentruClienti/About">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/PaginiPentruClienti/Reservation">Reservation</a>
-                        </li>
+                <!--LOGO-->
+                <a href="#" class="navbar-brand">HugAMug</a>
 
+                <!--DROPDOWNLIST-->
+                <button type="button" class="navbar-toggler" data-bs-target="#navbarNav" data-bs-toggle="collapse"
+                        aria-controls="navbarNav" aria-expanded="false" aria-lable="Toggle Navbar">
+
+                    <span class="navbar-toggler-icon"> </span>
+                </button>
+
+                <!--BARA DE NAVIGARE-->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mx-auto">
+                    </div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Acasă</a></li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="/Cafele/Index" class="nav-link text-white">Crează-ți cafeaua</a></li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#about" class="nav-link text-white">Despre</a></li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link text-white">Contact</a></li>
+                    </ul>
+                    <ul>
                         @if(User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
                             <select onchange="location = this.value;">
@@ -41,27 +66,6 @@
                                 <option value="/Membrii/Index">Membrii</option>
                             </select>
 
-                            <!--
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriCafele/Index">Tip Cafea</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriBoabe/Index">Tip Boabe</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriLapte/Index">Tip Lapte</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriArome/Index">Tip Aroma</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriToppinguri/Index">Tip Topping</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Membrii/Index">Membrii</a>
-                            </li>
-                            -->
-
                         }
                        
 
@@ -71,6 +75,7 @@
                 </div>
             </div>
         </nav>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
