--- a/Pages/TipuriArome/Index.cshtml
+++ b/Pages/TipuriArome/Index.cshtml
@@ -5,39 +5,32 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<head>
+    <link rel="stylesheet" href="~/css/IngredienteCSS.css" asp-append-version="true" />
+</head>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TipAroma[0].DenumireAroma)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipAroma[0].Imagine)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+<body>
+    <h1>Index</h1>
+
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+
+    <div class="grid-container">
         @foreach (var item in Model.TipAroma)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DenumireAroma)
-                </td>
-                <td>
-                    <img src="data:image/jpg;base64 , @item.Imagine", width="210px", height="140px", style="border-radius:10px"/>
-                </td>
-                <td>
+            <div class="grid-item">
+                <h4>@item.DenumireAroma</h4>
+                <img src="data:image/jpg;base64 , @item.Imagine" />
+                <p>
+                <div>
                     <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
                     <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
                     <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-                </td>
-            </tr>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+    </div>
+</body>
+
+
