--- a/Pages/TipuriCafele/Index.cshtml
+++ b/Pages/TipuriCafele/Index.cshtml
@@ -5,38 +5,30 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<head>
+    <link rel="stylesheet" href="~/css/IngredienteCSS.css" asp-append-version="true" />
+</head>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TipCafea[0].Tip)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipCafea[0].Imagine)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.TipCafea) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tip)
-            </td>
-            <td>
-                <img src="data:image/jpg;base64 , @item.Imagine" , width="210px" , height="140px" , style="border-radius:10px" />
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<body>
+    <h1>Index</h1>
+
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+
+    <div class="grid-container">
+        @foreach (var item in Model.TipCafea)
+        {
+            <div class="grid-item">
+                <h4>@item.Tip</h4>
+                <img src="data:image/jpg;base64 , @item.Imagine" />
+                <p>
+                <div>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </div>
+            </div>
+        }
+    </div>
+</body>
