--- a/Pages/TipuriToppinguri/Index.cshtml
+++ b/Pages/TipuriToppinguri/Index.cshtml
@@ -6,38 +6,31 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TipTopping[0].DenumireTopping)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipTopping[0].Imagine)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.TipTopping) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DenumireTopping)
-            </td>
-            <td>
-                <img src="data:image/jpg;base64 , @item.Imagine" , width="210px" , height="140px" , style="border-radius:10px" />
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<head>
+    <link rel="stylesheet" href="~/css/IngredienteCSS.css" asp-append-version="true" />
+</head>
+
+<body>
+    <h1>Index</h1>
+
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+
+    <div class="grid-container">
+        @foreach (var item in Model.TipTopping)
+        {
+            <div class="grid-item">
+                <h4>@item.DenumireTopping</h4>
+                <img src="data:image/jpg;base64 , @item.Imagine" />
+                <p>
+                <div>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </div>
+            </div>
+        }
+    </div>
+</body>
