--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,37 +24,26 @@
 </head>
 <body>
     <header>
-        <!--SECTIUNEA NAVBAR-->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <!--LOGO-->
-                <a href="#" class="navbar-brand">HugAMug</a>
-
-                <!--DROPDOWNLIST-->
-                <button type="button" class="navbar-toggler" data-bs-target="#navbarNav" data-bs-toggle="collapse"
-                        aria-controls="navbarNav" aria-expanded="false" aria-lable="Toggle Navbar">
-
-                    <span class="navbar-toggler-icon"> </span>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Cafenea</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Cafele/Index">Crează-ți povestea</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="#about">Despre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="#">Contact</a>
+                        </li>
 
-                <!--BARA DE NAVIGARE-->
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="mx-auto">
-                    </div>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link text-white">Acasă</a></li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="/Cafele/Index" class="nav-link text-white">Crează-ți cafeaua</a></li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#about" class="nav-link text-white">Despre</a></li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link text-white">Contact</a></li>
-                    </ul>
-                    <ul>
-                        @if(User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
                             <select onchange="location = this.value;">
                                 <option value="">Administrator</option>
@@ -63,11 +52,30 @@
                                 <option value="/TipuriLapte/Index">Tip Lapte</option>
                                 <option value="/TipuriArome/Index">Tip Aroma</option>
                                 <option value="/TipuriToppinguri/Index">Tip Topping</option>
-                                <option value="/Membrii/Index">Membrii</option>
                             </select>
 
+                            <!--
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriCafele/Index">Tip Cafea</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriBoabe/Index">Tip Boabe</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriLapte/Index">Tip Lapte</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriArome/Index">Tip Aroma</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/TipuriToppinguri/Index">Tip Topping</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Membrii/Index">Membrii</a>
+                            </li>
+                            -->
                         }
-                       
+
 
                     </ul>
                     <partial name="_LoginPartial" />
